--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>SHSP</title>
 </head>
 <body>
+<div class="Guru"></div>
 <div class="canvas">
     <div class="question question-01">
         <div class="question-background"></div>
