--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,16 @@
     <title>SHSP</title>
 </head>
 <body>
+<div class="start-screen">
+    <div class="start-screen-wrapper">
+        <div class="start-screen-content">
+            <h1>
+                Click to START
+            </h1>
+            <img src="#">
+        </div>
+    </div>
+</div>
 <div class="Guru"></div>
 <div class="canvas">
     <div class="question question-01">
