Vragen array added

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 </div>
 <div class="Guru"></div>
 <div class="canvas">
-    <div class="Questions"></div>
+    <div class="Questions" style="color: black"></div>
     <div class="question question-01">
         <div class="question-background"></div>
         <div class="question-content">Hallo</div>
