--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
             <h1>
                 Click to START
             </h1>
-            <img src="#">
+<!--            <img src="./img/logo/Logo-GURU.png">-->
         </div>
     </div>
 </div>
