--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,9 @@
 </div>
 <div class="Guru"></div>
 <div class="canvas">
-    <div class="Questions" style="color: black"></div>
-    <div class="question question-01">
+    <div class="question">
         <div class="question-background"></div>
-        <div class="question-content">Hallo</div>
+        <div class="question-content"></div>
     </div>
 </div>
 </body>
