Added intro and sounds

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     </div>
 </div>
 <div class="Guru"></div>
+<div class="sound"></div>
 <div class="canvas">
     <div class="question">
         <div class="question-background"></div>
