--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <div class="start-screen-wrapper">
         <div class="start-screen-content">
             <h1>
-                Click to START
+                click to START
             </h1>
 <!--            <img src="./img/logo/Logo-GURU.png">-->
         </div>
