--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 <div class="Guru"></div>
 <div class="sound"></div>
 <div class="canvas">
-    <div class="question">
+    <div class="question begonnen">
         <div class="question-background"></div>
         <div class="question-content"></div>
     </div>
