--- a/src/guru-overview.html
+++ b/src/guru-overview.html
@@ -5,6 +5,15 @@
     <title>Guru Overview</title>
 </head>
 <body>
+    <div class="button-info">
+        <div class="button-info-wrapper">
+            <div class="button-info-content">
+                <h1>
+                </h1>
+    <!--            <img src="./img/logo/Logo-GURU.png">-->
+            </div>
+        </div>
+    </div>
 <div class="guru-overview">
 
 </div>
